# robotprogramming

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
config/: rviz_config.rviz
docs/: development_phases.md  inverse_kinematics_research.md  project_planning.md
include/robotprogramming/: ik_calculator.h
launch/: ik_solver.launch  keyboard_control.launch  robot_control.launch
scripts/: run_tests.sh  test_ik_node.sh
src/: ik_calculator.cpp  ik_solver_node.cpp  keyboard_controller_node.cpp  test_ik_calculator.cpp
urdf/: robot.urdf
