<?xml version="1.0"?>
<package format="2">
  <name>robotprogramming</name>
  <version>1.0.0</version>
  <description>Inverse kinematics solver for 2-link planar manipulator with RViz visualization</description>

  <maintainer email="robotics@university.edu">Robotics Course</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>eigen3</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>eigen3</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>eigen3</exec_depend>

  <export>
  </export>
</package>